# plataforma-bd2

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  models.py  pyproject.toml
migrations/versions/: 09f6f124f969_initial.py  56893875a758_initial.py  72f21bb82197_initial.py  9319a62dedae_create_initial_user.py  aa175f0a1f30_create_initial_user.py  b4fbc2fbb3ca_create_default_user.py
templates/: base.html  index.html  list.html  login.html  register.html
